<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/color_background_list_item"
    app:cardCornerRadius="8dp"
    app:cardElevation="3dp"
    app:cardMaxElevation="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/author_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/author_label"
            android:textColor="@color/light_green"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/authors_list"
            app:layout_constraintStart_toStartOf="@+id/news_type"
            app:layout_constraintTop_toTopOf="@+id/authors_list" />

        <TextView
            android:id="@+id/news_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/type_shap"
            android:elevation="4dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/news_type"
            android:textColor="@android:color/background_light"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/news_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:fontFamily="sans-serif-thin"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/long_place_holder"
            android:textColor="@color/colorPrimaryVariant"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/news_type"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/news_section"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif-condensed"
            android:maxLines="1"
            android:text="@string/place_holder"
            android:textColor="@color/light_red"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/news_date"
            app:layout_constraintHorizontal_weight="6"
            app:layout_constraintStart_toStartOf="@+id/news_title"
            app:layout_constraintTop_toBottomOf="@+id/news_title" />

        <TextView
            android:id="@+id/news_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif-condensed"
            android:gravity="end"
            android:maxLines="1"
            android:text="@string/place_holder"
            android:textColor="@color/blue"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/news_section"
            app:layout_constraintEnd_toStartOf="@id/news_time"
            app:layout_constraintHorizontal_weight="4"
            app:layout_constraintStart_toEndOf="@+id/news_section"
            app:layout_constraintTop_toTopOf="@+id/news_section" />

        <TextView
            android:id="@+id/news_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif-thin"
            android:maxLines="1"
            android:text="@string/place_holder"
            android:textColor="@color/light_green"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/news_date"
            app:layout_constraintEnd_toEndOf="@+id/news_title"
            app:layout_constraintStart_toEndOf="@+id/news_date"
            app:layout_constraintTop_toTopOf="@+id/news_date" />

        <ListView
            android:id="@+id/authors_list"
            android:layout_width="0dp"
            android:layout_height="225dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:cacheColorHint="@color/blue"
            android:dividerHeight="1dp"
            android:fadeScrollbars="true"
            android:fastScrollEnabled="true"
            android:orientation="vertical"
            android:padding="8dp"
            android:scrollbars="vertical"
            android:smoothScrollbar="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/news_time"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/author_label"
            app:layout_constraintTop_toBottomOf="@+id/news_section" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/blue"
            app:layout_constraintBottom_toTopOf="@+id/authors_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/news_section" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>